config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dv-service
spec:
  selector:
    app: dv-app
  ports:
    - name: name-of-service-port
      protocol: TCP
      port: 8000
      targetPort: 8000
