config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dv-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dv-service
                port:
                  number: 8000
